crates/formatter/tests/snapshots/snapshots__migrations__000206_add_tailnet_tunnels_indexes.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index idx_tailnet_tunnels_src_id;
drop index idx_tailnet_tunnels_dst_id;
