crates/formatter/tests/snapshots/snapshots__migrations__000207_site_configs_text.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table site_configs alter column value type character varying(8192);
