crates/formatter/tests/snapshots/snapshots__migrations__000207_site_configs_text.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table site_configs alter column value type text;
