crates/formatter/tests/snapshots/snapshots__migrations__000208_notification_banners.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update site_configs
set key = 'notification_banners', value = concat('[', value, ']')
where key = 'service_banner';
