crates/formatter/tests/snapshots/snapshots__migrations__000209_custom_roles.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index if exists idx_custom_roles_name_lower;
drop table if exists custom_roles;
