crates/formatter/tests/snapshots/snapshots__migrations__000210_unique_org_name.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table only organizations drop constraint if exists organizations_name;
