crates/formatter/tests/snapshots/snapshots__migrations__000210_unique_org_name.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table only organizations add constraint organizations_name unique (name);
