crates/formatter/tests/snapshots/snapshots__migrations__000212_custom_role_orgs.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table custom_roles
	-- This column is nullable, meaning no organization scope
	drop column organization_id;
